<resources>
    <string name="app_name">Formación</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="text_communities">Comunidades</string>
    <string name="text_google_plus">Google+</string>
    <string name="text_materials">Materiales</string>
    <string name="text_drive">Google Drive</string>
    <string name="text_result">Resultados</string>
    <string name="text_training">Formación</string>
    <string name="text_confirm_assistance">Confirmar Asistencia</string>
    <string name="text_calendar">Calendarios</string>
    <string name="text_poll">Encuestas</string>
    <string name="text_evaluations">Evaluación</string>
    <string name="text_teacher">Docente</string>
    <string name="text_group">Grupo</string>
    <string name="text_date">Fecha</string>
    <string name="text_hour">Hora</string>
    <string name="hint_assistance_code">Código de Asistencia</string>
    <string name="text_send">Responder</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_username">Usuario</string>
    <string name="text_sign_in">Ingresar</string>


    <string name="text_reply_invitation">Responder</string>
    <string name="text_finalize">Finalizar</string>

    <string name="text_resources">Recursos</string>
    <string name="text_google_calendar">Google Calendar</string>
    <string name="text_campus_bbva">Campus BBVA</string>
    <string name="menu">MENÚ</string>

    <string name="loading">Cargando...</string>
    <string name="txt_username">Registro</string>
    <string name="txt_password">Contraseña</string>
    <string name="txt_split"> / </string>
    <string name="text_home">Home</string>

    <string name="text_active_invitations_small">Invitaciones</string>
    <string name="text_active_invitations_large">Invitaciones Activas</string>

    <string name="text_scheduler_activities_small">Actividades</string>
    <string name="text_scheduler_activities_large">Actividades Programadas</string>

    <string name="text_available_materials_small">Materiales</string>
    <string name="text_available_materials_large">Materiales Disponibles</string>

    <string name="text_assists_score_small">Asistencias</string>
    <string name="text_assists_score_large">Asistencias por Marcar</string>

    <string name="text_active_evaluations_small">Evaluaciones</string>
    <string name="text_active_evaluations_large">Evaluaciones Activas</string>

    <string name="text_active_polls_small">Encuestas</string>
    <string name="text_active_polls_large">Encuestas Activas</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_refresh">Recargar</string>
    <string name="text_sign_out">Cerrar Sesión</string>
    <string name="txt_response">Responder Invitación</string>
    <string name="text_response">Enviar</string>
    <string name="text_cancel">Cancelar</string>
    <string name="text_details">Detalle de actividades</string>
    <string name="text_objetivo">Objetivo</string>
    <string name="text_target">Descripción</string>
    <string name="text_title">Título</string>
    <string name="text_program_activities_detail">Actividades programadas</string>
    <string name="txt_no_data_event">No hay eventos</string>
    <string name="permission_required">El permiso es requerido</string>
    <string name="text_previous">Anterior</string>
    <string name="text_next">Siguiente</string>
    <string name="text_end">Finalizar</string>
</resources>
