<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/txt_response"
        android:textAllCaps="true"
        android:textColor="#0B3356"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spResponse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.qubicgo.android.appformacion.custom.ButtonCustom
            android:id="@+id/btnResponse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/text_response"
            android:textAllCaps="false"
            android:textColor="@color/divisor_2" />

        <com.qubicgo.android.appformacion.custom.ButtonCustom
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/text_cancel"
            android:textAllCaps="false"
            android:textColor="@color/divisor_2" />

    </LinearLayout>


</LinearLayout>
