<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context=".fragments.HomeFragment">

    <include layout="@layout/divisor_grosor" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:adjustViewBounds="true"
        android:padding="20dp"
        android:scaleType="fitXY"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:src="@drawable/logo_bbva_blanco" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/llActiveInvitation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.qubicgo.android.appformacion.custom.TextViewCustom
                    android:id="@+id/tvActiveInvitation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/white"
                    android:textSize="50sp" />

                <com.qubicgo.android.appformacion.custom.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/text_active_invitations_small"
                    android:textColor="@color/color_home"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llActivitiesProgram"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.qubicgo.android.appformacion.custom.TextViewCustom
                    android:id="@+id/tvActivitiesProgram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/white"
                    android:textSize="50sp" />

                <com.qubicgo.android.appformacion.custom.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/text_scheduler_activities_small"
                    android:textColor="@color/color_home"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/llAvailableMaterials"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.qubicgo.android.appformacion.custom.TextViewCustom
                    android:id="@+id/tvAvailableMaterials"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/white"
                    android:textSize="50sp" />

                <com.qubicgo.android.appformacion.custom.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/text_available_materials_small"
                    android:textColor="@color/color_home"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llAssistsToScore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.qubicgo.android.appformacion.custom.TextViewCustom
                    android:id="@+id/tvAssistsToScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/white"
                    android:textSize="50sp" />

                <com.qubicgo.android.appformacion.custom.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/text_assists_score_small"
                    android:textColor="@color/color_home"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/llActiveEvaluations"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.qubicgo.android.appformacion.custom.TextViewCustom
                    android:id="@+id/tvActiveEvaluations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/white"
                    android:textSize="50sp" />

                <com.qubicgo.android.appformacion.custom.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/text_active_evaluations_small"
                    android:textColor="@color/color_home"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llActivePolls"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.qubicgo.android.appformacion.custom.TextViewCustom
                    android:id="@+id/tvActivePolls"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/white"
                    android:textSize="50sp" />

                <com.qubicgo.android.appformacion.custom.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/text_active_polls_small"
                    android:textColor="@color/color_home"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
