<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <include
        android:id="@+id/include"
        layout="@layout/divisor" />

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/foto1"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.qubicgo.android.appformacion.custom.TextViewBoldCustom
            android:id="@+id/tvRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title"
            android:textColor="@android:color/white"
            android:textSize="26sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

        <com.qubicgo.android.appformacion.custom.TextViewBoldCustom
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:lineSpacingExtra="14sp"
            android:text="@string/text_details"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerCheckIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:scrollbarAlwaysDrawHorizontalTrack="true"
            android:scrollbars="horizontal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="bottom|left"
            android:text="Código de Asistencia"
            android:textColor="@android:color/white"
            android:textSize="10sp" />

        <com.qubicgo.android.appformacion.custom.EditTextCustom
            android:id="@+id/etCode"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/background"
            android:inputType="text" />

        <com.qubicgo.android.appformacion.custom.ButtonCustom
            android:id="@+id/btnCheckIn"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="bottom|end"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/divisor_2"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/text_send"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
