<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:fillViewport="true"
    android:scrollbars="vertical"
    android:windowSoftInputMode="adjustPan|adjustResize"
    tools:context=".activities.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <include layout="@layout/divisor_grosor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:padding="70dp"
                    android:scaleType="fitXY"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    android:src="@drawable/logo_bbva_blanco" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <com.qubicgo.android.appformacion.custom.TextViewCustom
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_horizontal"
                        android:layout_marginLeft="60dp"
                        android:layout_marginRight="60dp"
                        android:text="@string/txt_username"
                        android:textColor="#8AD2F8"
                        android:textSize="12sp" />

                    <com.qubicgo.android.appformacion.custom.EditTextCustom
                        android:id="@+id/etUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:layout_marginRight="60dp"
                        android:background="@drawable/background"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
                        android:inputType="textCapCharacters"
                        android:nextFocusForward="@+id/etPassword"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:text="P014773" />

                    <com.qubicgo.android.appformacion.custom.TextViewCustom
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_horizontal"
                        android:layout_marginLeft="60dp"
                        android:layout_marginRight="60dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/txt_password"
                        android:textColor="#8AD2F8"
                        android:textSize="12sp" />

                    <com.qubicgo.android.appformacion.custom.EditTextCustom
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:layout_marginRight="60dp"
                        android:background="@drawable/background"
                        android:inputType="textPassword"
                        android:padding="5dp"
                        android:text="perutest2" />

                    <com.qubicgo.android.appformacion.custom.ButtonCustom
                        android:id="@+id/btnSignIn"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="30dp"
                        android:background="@android:color/black"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/text_sign_in"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>